# mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  build.sh  cabal.project  cabal.project.freeze  flake.nix  mcp.cabal
.beads/: issues.jsonl
.claude/: settings.json
.claude/commands/: speckit.implement.md
.claude/hooks/: check-haskell.sh
.github/workflows/: docker-ci.yml  haskell-ci.yml
app/: Main.hs
examples/: http-server.hs  oauth-client-demo.sh  stdio-server.hs  test-edge-cases.sh
mcp-protocol/: CHANGELOG.md  mcp-protocol.cabal
mcp-server/: CHANGELOG.md  README.md  mcp-server.cabal  mcp.cabal
mcp-server/example/: Main.hs  SKILL.md  mcp-config.json  mcp-example.cabal
mcp-server/example/test/: README.md  package.json  test_mcp_server.mjs
mcp-server/src/MCP/: Server.hs
mcp-server/src/MCP/Server/: Common.hs  HTTP.hs  Stdio.hs
mcp-server/src/MCP/Server/HTTP/: Internal.hs
mcp-server/test/: Main.hs
mcp-server/test/MCP/: Integration.hs  SimpleHTTPIntegration.hs  StdioIntegration.hs  TestServer.hs  TestUtils.hs
mcp-types/: CHANGELOG.md  README.md  mcp-types.cabal
mcp-types/src/MCP/: Aeson.hs  Protocol.hs  Types.hs
mcp-types/test/: Main.hs
nix/: hix.nix
scripts/: release.sh  test-in-docker.sh
specs/001-claude-mcp-connector/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-claude-mcp-connector/checklists/: requirements.md
specs/001-claude-mcp-connector/contracts/: mcp-401-response.yaml  oauth-protected-resource.yaml
specs/002-login-auth-page/: MANIFEST.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-login-auth-page/checklists/: requirements.md
specs/002-login-auth-page/contracts/: login-api.md
src/: MCP.hs
src/MCP/: Aeson.hs  Protocol.hs  Server.hs  Types.hs
src/MCP/Server/: Auth.hs  HTTP.hs
test/: Main.hs
test/MCP/: Integration.hs  TestServer.hs  TestUtils.hs
