cabal-version: 2.2
name: mcp-example
version: 0.1.0.0
license: MPL-2.0
synopsis: Example MCP server demonstrating the mcp library
description:
  A standalone example server showcasing the full feature set of the
  @mcp@ library: tools, resources, resource templates, prompts,
  completions, logging, and JWT authentication.

build-type: Simple

executable mcp-example
  default-language:
    Haskell2010

  default-extensions:
    DataKinds
    DeriveGeneric
    DuplicateRecordFields
    FlexibleInstances
    GADTs
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies

  hs-source-dirs:
    .

  main-is:
    Main.hs

  ghc-options:
    -threaded

  build-depends:
    aeson >=2.1 && <2.3,
    base >=4.18 && <4.22,
    bytestring >=0.11 && <0.13,
    containers >=0.6 && <0.8,
    mcp,
    servant-auth-server >=0.4 && <0.5,
    servant-server >=0.19 && <0.21,
    text >=2.0 && <2.2,
    time >=1.12 && <1.15,
    warp >=3.3 && <3.5,
